--- a/src/app/components/remedys/remedy/remedy.component.html
+++ b/src/app/components/remedys/remedy/remedy.component.html
@@ -1,4 +1,4 @@
-<a>
+<a [routerLink]="['/remedys',remedy.id]">
   <div class="place-info-box">
     <span class="place-info-box-icon"><img [src]="remedy.imagePath" /></span>
 
