Buscando Itens Menu

--- a/src/app/components/remedys/remedy-details/remedy-details.component.html
+++ b/src/app/components/remedys/remedy-details/remedy-details.component.html
@@ -37,8 +37,8 @@
                <a class="pull-left detail-active" routerLinkActive="detail-active" [routerLink]="['menu']">
                   Menu
                </a>
-               <a class="pull-right" routerLinkActive="detail-active" [routerLink]="['reviews']">
-                  Avaliações
+               <a class="pull-right" routerLinkActive="detail-active" [routerLink]="['comments']">
+                  Comentários
                </a>
              </div>
              </div>
