--- a/src/styles.css
+++ b/src/styles.css
@@ -119,7 +119,7 @@ body {
   background: #fff;
   width: 100%;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 2px;
+  border-radius: 22px;
   margin-bottom: 15px;
 }
 .menu-item-info-box small {
@@ -161,7 +161,7 @@ body {
 
 .menu-item-info-box-content {
   padding: 5px 10px;
-  margin-left: 120px;
+  margin-left: 140px;
 }
 
 .menu-item-info-box-content a {
@@ -171,7 +171,7 @@ body {
 .menu-item-info-box-detail {
   display: block;
   font-size: 14px;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   width: 100%;
 }
 
@@ -191,6 +191,9 @@ body {
 
 .menu-item-info-box-more {
   display: block;
+}
+.menu-item-info-box-phone{
+  font-size: 14px,
 }
 
 /**
