--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,6 +12,7 @@
     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
       <ul class="nav navbar-nav">
           <li routerLinkActive="active" [routerLink]="['/remedys']"><a>Remédios</a></li>
+          <li routerLinkActive="active" [routerLink]="['/remedy-register']"><a>Cadastrar Remédio</a></li>
           <li routerLinkActive="active" [routerLink]="['/about']"><a>Sobre</a></li>
       </ul>
     </div>
