--- a/src/app/components/remedys/remedy-details/remedy-details.component.html
+++ b/src/app/components/remedys/remedy-details/remedy-details.component.html
@@ -29,6 +29,7 @@
                    <dd>{{remedy?.dosage}}</dd>
                    <dt>Descrição</dt>
                    <dd>{{remedy?.description}}</dd>
+                   <a href="#" [routerLink]="['/remedy-register']"><h4>Cadastrar novo remédio</h4></a>
 
                  </dl>
                </div>
@@ -41,6 +42,7 @@
                   Comentários
                </a>
              </div>
+
              </div>
            </div>
            <!-- /.col-xs-12 -->
