--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -1,11 +1,11 @@
 <div class="form-group">
   <form #formRemedy="ngForm" novalidate>
-    <div [class.has-success]="input.valid && (input.dirty|| input.touched)"
-         [class.has-error]="!input.valid && (input.dirty|| input.touched)">
+    <div [class.has-success]="hasSuccess()"
+         [class.has-error]="hasError()">
         <label for="remedyRegisterRemedyName">{{label}}</label>
 
         <ng-content></ng-content>
 
-        <span class="help-block" *ngIf="input.valid && (input.dirty|| input.touched)"><i class="fa fa-check"></i>ok</span>
-        <span class="help-block" *ngIf="!input.valid && (input.dirty|| input.touched)"><i class="fa fa-remove"></i>{{errorMessage}}</span>
+        <span class="help-block" *ngIf="hasSuccess()"><i class="fa fa-check"></i>ok</span>
+        <span class="help-block" *ngIf="hasError()"><i class="fa fa-remove"></i>{{errorMessage}}</span>
     </div>
