--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,4 +6,28 @@
     <p>Procura doação de remédios ? Veja Quais estão disponiveis</p>
     <a class="btn btn-primary btn-lg" [routerLink]="['/remedys']">Pesquisar</a>
   </div>
+
+  <div class="jumbotron content-jumbotron">
+    <h1>Como funciona ! <i class="fa fa-gear"></i></h1>
+    <p>É bem simples, você deve procurar pelo remédio que precisa logo em cima clicando em pesquisar,</p>
+    <p>ou então escolhendo o menu Remédios. Poderá filtrar por cidade, categoria, da forma que precisar,</p>
+    <p>e combinar com a pessoa que está doando, sem custo e sem complicações!</p>
+  </div>
+  <div class="jumbotron-custom jumbotron content-jumbotron">
+    <h3> Nós acreditamos em um mundo melhor! <i class="fa fa-globe"></i></h3>
+    <div class=" col-xs-12 col-md-4">
+      <h3> Economise dinheiro</h3>
+      <h1><i class="fa fa-money"></i></h1>
+    </div>
+    <div class=" col-xs-12 col-md-4">
+      <h3> Economise Tempo</h3>
+      <h1><i class="fa fa-clock-o"></i></h1>
+    </div>
+
+    <div class=" col-xs-12 col-md-4">
+      <h3> Economia Compartilhada</h3>
+      <h1><i class="fa fa-users"></i></h1>
+    </div>
+
+  </div>
 </section>
