--- a/src/app/components/remedys/remedy-details/remedy-details.component.html
+++ b/src/app/components/remedys/remedy-details/remedy-details.component.html
@@ -14,21 +14,21 @@
                <div class="box-header with-border">
                  <i class="fa fa-home"></i>
 
-                 <h3 class="box-title">{{remedy?.name}}</h3><span class="pull-right"><i class="fa fa-star"></i>{{remedy?.rating}}</span>
+                 <h3 class="box-title">{{remedy?.des_name}}</h3><span class="pull-right"><i class="fa fa-star"></i></span>
                </div>
                <!-- /.box-header -->
                <div class="box-body">
                  <div class="col-sm-3 col-xs-12" *ngIf="remedy">
-                   <img class="box-img-detail" [src]="remedy?.imagePath" />
+                   <!--<img class="box-img-detail" [src]="remedy.des_imagePath" />-->
                  </div>
 
                  <dl class="col-sm-9 col-xs-12">
                    <dt>Categoria</dt>
-                   <dd>{{remedy?.category}}</dd>
+                   <dd>{{remedy?.des_category}}</dd>
                    <dt>Dosagem</dt>
-                   <dd>{{remedy?.dosage}}</dd>
+                   <dd>{{remedy?.des_dosage}}</dd>
                    <dt>Descrição</dt>
-                   <dd>{{remedy?.description}}</dd>
+                   <dd>{{remedy?.des_description}}</dd>
                    <a href="#" [routerLink]="['/remedy-register']"><h4>Cadastrar novo remédio</h4></a>
 
                  </dl>
