--- a/src/app/components/remedys/remedy-details/menu-item/menu-item.component.html
+++ b/src/app/components/remedys/remedy-details/menu-item/menu-item.component.html
@@ -1,12 +1,12 @@
 <div class="menu-item-info-box">
-  <span class="menu-item-info-box-icon"><img [src]="menuItem.imagePath"></span>
+  <span class="menu-item-info-box-icon"><img [src]="menuItem.des_imagePath"></span>
 
   <div class="menu-item-info-box-content">
-    <span class="menu-item-info-box-text">{{menuItem.name}}</span>
-    <span class="menu-item-info-box-detail">Validade : {{menuItem.validateDate | date: "dd/MM/yyyy"}}</span>
-    <span class="menu-item-info-box-detail">Usuário : {{menuItem.userName}}</span>
+    <span class="menu-item-info-box-text">{{menuItem.des_name}}</span>
+    <span class="menu-item-info-box-detail">Validade : {{menuItem.des_validate}}</span>
+  <!--  <span class="menu-item-info-box-detail">Usuário : {{menuItem.userName}}</span>
     <span class="menu-item-info-box-detail">Contato : {{menuItem.userEmail}}</span>
     <span class="menu-item-info-box-phone">Telefone : {{menuItem.phone}}</span>
-    <a href="mailto:{{menuItem.userEmail}}&subject=GetMyRemedy" class="pull-right"><i class="fa fa-plus-circle"></i>Solicitar</a>
+    <a href="mailto:{{menuItem.userEmail}}&subject=GetMyRemedy" class="pull-right"><i class="fa fa-plus-circle"></i>Solicitar</a>-->
   </div>
 </div>
