--- a/src/app/components/remedys/remedy-details/remedy-details.component.html
+++ b/src/app/components/remedys/remedy-details/remedy-details.component.html
@@ -24,7 +24,7 @@
 
                  <dl class="col-sm-9 col-xs-12">
                    <dt>Categoria</dt>
-                   <dd>{{remedy?.des_category}}</dd>
+                   <dd>{{des_category}}</dd>
                    <dt>Dosagem</dt>
                    <dd>{{remedy?.des_dosage}}</dd>
                    <dt>Descrição</dt>
