Menu item já recebe dados do usuário e remédio

--- a/src/app/components/remedys/remedy-details/menu-item/menu-item.component.html
+++ b/src/app/components/remedys/remedy-details/menu-item/menu-item.component.html
@@ -4,9 +4,10 @@
   <div class="menu-item-info-box-content">
     <span class="menu-item-info-box-text">{{menuItem.des_name}}</span>
     <span class="menu-item-info-box-detail">Validade : {{menuItem.des_validate}}</span>
-  <!--  <span class="menu-item-info-box-detail">Usuário : {{menuItem.userName}}</span>
-    <span class="menu-item-info-box-detail">Contato : {{menuItem.userEmail}}</span>
-    <span class="menu-item-info-box-phone">Telefone : {{menuItem.phone}}</span>
-    <a href="mailto:{{menuItem.userEmail}}&subject=GetMyRemedy" class="pull-right"><i class="fa fa-plus-circle"></i>Solicitar</a>-->
+    <span class="menu-item-info-box-detail">Usuário : {{menuItem.nom_name}}</span>
+    <span class="menu-item-info-box-detail">Cidade : {{menuItem.des_city}}</span>
+    <span class="menu-item-info-box-detail">Contato : {{menuItem.des_mail}}</span>
+    <span class="menu-item-info-box-phone">Telefone : {{menuItem.num_phone}}</span>
+    <!--   <a href="mailto:{{menuItem.userEmail}}&subject=GetMyRemedy" class="pull-right"><i class="fa fa-plus-circle"></i>Solicitar</a>-->
   </div>
 </div>
