--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,9 +11,17 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
       <ul class="nav navbar-nav">
-          <li routerLinkActive="active" [routerLink]="['/remedys']"><a>Remédios</a></li>
+          <li  routerLinkActive="active" [routerLink]="['/remedys']"><a>Remédios</a></li>
           <li routerLinkActive="active" [routerLink]="['/remedy-register']"><a>Cadastrar Remédio</a></li>
           <li routerLinkActive="active" [routerLink]="['/about']"><a>Sobre</a></li>
+
+
+      </ul>
+    </div>
+
+    <div class="collapse navbar-collapse pull-right" id="navbar-collapse">
+      <ul class="nav navbar-nav">
+          <li class="pull-right" [routerLink]="['/login']"><a>Login / Register</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
