--- a/src/app/components/login-register/login-register.component.html
+++ b/src/app/components/login-register/login-register.component.html
@@ -3,7 +3,7 @@
   <div class=" col-xs-12 col-md-12">
     <div class="col-md-12">
         <div class="box-header with-border box box-primary">
-          <h3 class="box-title callout callout-info col-md-12 col-xs-12">Dados do Usuário</h3>
+          <h3 class="box-title callout callout-info col-md-12 col-xs-12">Cadastrar Usuário</h3>
             <div class="form-group">
               <form #formRemedy="ngForm" novalidate>
 
@@ -40,7 +40,6 @@
                 </gmr-input-container>
 
 
-
               </form>
             </div>
         </div>
@@ -51,6 +50,7 @@
         <div class="col-md-12">
             <div class="box-header with-border box box-primary">
                 <div class="form-group">
+
                   <div class="col-md-4 col-xs-6" type="sbmit">
                     <button class="btn btn-primary col-md-12 button-custom" type="sbmit" (click)="checkInformations(formRemedy.value)" [disabled]=" !formRemedy.valid"  name="remedyRegisterButtonSubmit">Confirmar</button>
                   </div>
@@ -68,5 +68,5 @@
 
         </div>
 
-      
+
 </section>
