--- a/src/app/components/login-register/login/login.component.html
+++ b/src/app/components/login-register/login/login.component.html
@@ -1,45 +1,45 @@
 <div class="login-box-body login-box-body-custom">
-    <p class="login-box-msg">Sign in to start your session</p>
+    <p class="login-box-msg">GetMyRemedy | APP</p>
 
     <form method="post" #formLogin="ngForm">
       <div class="form-group has-feedback">
-      <gmr-input-container errorMessage="Campo obrigatório com no minimo 4 caracteres" label="Email:">
+      <gmr-input-container  [showTip]="false">
         <input name="des_mail" class="form-control" placeholder="Coloque o e-mail" ngModel required minlength="4">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </gmr-input-container>
       </div>
       <div class="form-group has-feedback">
-      <gmr-input-container errorMessage="Campo obrigatório com no minimo 6 caracteres" label="Senha:">
+      <gmr-input-container [showTip]="false">
         <input type="password" name="des_password" class="form-control" placeholder="Coloque a Senha" ngModel required minlength="6">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </gmr-input-container>
       </div>
       <div class="row">
         <div class="col-xs-8">
-          <div class="checkbox icheck">
+          <!--  <div class="checkbox icheck">
             <label>
               <div class="icheckbox_square-blue" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div> Remember Me
             </label>
-          </div>
+          </div> -->
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" (click)="checkLoginInformations(formLogin.value)" class="btn btn-primary btn-block btn-flat">Sign In</button>
+          <button type="submit" (click)="checkLoginInformations(formLogin.value)" [disabled]="!formLogin.valid" class="btn btn-primary btn-block btn-flat">Logar</button>
         </div>
         <!-- /.col -->
       </div>
     </form>
 
     <div class="social-auth-links text-center">
-      <p>- OR -</p>
+    <!--  <p>- OR -</p>
       <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using
         Facebook</a>
       <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using
         Google+</a>
-    </div>
+    </div>-->
     <!-- /.social-auth-links -->
 
-    <a href="#">I forgot my password</a><br>
-    <a href="register.html" class="text-center">Register a new membership</a>
+    <!--<a href="#">I forgot my password</a><br>-->
+    <a href="register.html" class="text-center">Cadastrar novo usuário</a>
 
   </div>
