--- a/src/app/components/login-register/login/login.component.html
+++ b/src/app/components/login-register/login/login.component.html
@@ -40,6 +40,6 @@
     <!-- /.social-auth-links -->
 
     <!--<a href="#">I forgot my password</a><br>-->
-    <a href="register.html" class="text-center">Cadastrar novo usuário</a>
+    <a [routerLink]="['/register']" class="text-center">Cadastrar novo usuário</a>
 
   </div>
