--- a/src/app/components/login-register/login/login.component.html
+++ b/src/app/components/login-register/login/login.component.html
@@ -1,4 +1,7 @@
-<div class="login-box-body login-box-body-custom">
+<div class="col-md-3">
+
+</div>
+<div class="login-box-body login-box-body-custom col-md-6">
     <p class="login-box-msg">GetMyRemedy | APP</p>
 
     <form method="post" #formLogin="ngForm">
@@ -41,5 +44,10 @@
 
     <!--<a href="#">I forgot my password</a><br>-->
     <a [routerLink]="['/register']" class="text-center">Cadastrar novo usuário</a>
+
+    </div>
+  </div>
+
+  <div class="col-md-3">
 
   </div>
