--- a/src/styles.css
+++ b/src/styles.css
@@ -20,9 +20,7 @@ body {
   min-height: 120px;
 }
 
-.login-box-body{
-  margin-left: 350px;
-  margin-right: 350px;
+.login-box-body-custom{
   margin-top: 20px;
   margin-bottom: 20px;
 }
