--- a/src/app/components/remedy-register/remedy-register.component.html
+++ b/src/app/components/remedy-register/remedy-register.component.html
@@ -38,15 +38,15 @@
                   </gmr-input-container>
 
 
-                <div class="col-md-4 col-xs-6" type="sbmit">
-                  <button class="btn btn-primary col-md-12 button-custom" type="sbmit" (click)="checkInformations(formRemedy.value)" [disabled]=" !formRemedy.valid"  name="remedyRegisterButtonSubmit">Confirmar</button>
+                <div class="col-md-4 col-xs-6" type="submit">
+                  <button class="btn btn-primary col-md-12 button-custom" type="sbmit" (click)="checkInformations(formRemedy.value)" [disabled]=" !formRemedy.valid && loggedIn()"  name="remedyRegisterButtonSubmit">Confirmar</button>
                 </div>
 
                 <div class="col-md-4 ">
 
                 </div>
 
-                <div class="col-md-4 col-xs-6" type="sbmit">
+                <div class="col-md-4 col-xs-6" type="submit">
                   <button class="btn btn-danger col-md-12 button-custom" type="sbmit" [routerLink]="'[/]'"  name="remedyRegisterButtonSubmit">Cencelar</button>
                 </div>
 
@@ -57,14 +57,6 @@
       </div>
 
 
-
-        <div class="col-md-12">
-            <div class="box-header with-border box box-primary">
-                <div class="form-group">
-
-                </div>
-            </div>
-          </div>
 
         </div>
 </section>
