--- a/src/app/components/remedys/remedy-details/comments/comments.component.html
+++ b/src/app/components/remedys/remedy-details/comments/comments.component.html
@@ -15,3 +15,21 @@
   </div>
 
 </div>
+
+<!--<div class=footer>
+
+<div class="col-md-3"></div>
+
+<div class="container content col-md-6">
+
+    <form #formComment="ngForm" novalidate>
+      <gmr-input-container errorMessage="Minimo 5 caracteres">
+        <textarea name="des_comment" class="form-control" placeholder="Coloque seu comentario" maxlength="140" minlength="5" ngModel required></textarea>
+      </gmr-input-container>
+    </form>
+    <button class="btn btn-primary pull-right" type="submit" (click)="checkInformations(formComment.value)" [disabled]=" !formComment.valid"  name="remedyCommentButtonSubmit">Enviar</button>
+</div>
+
+<div class="col-md-3"></div>
+
+</div> -->
