--- a/src/app/components/remedys/remedy-details/remedy-details.component.html
+++ b/src/app/components/remedys/remedy-details/remedy-details.component.html
@@ -14,7 +14,7 @@
                <div class="box-header with-border">
                  <i class="fa fa-home"></i>
 
-                 <h3 class="box-title" *ngIf="remedy" >{{remedy.des_name}}</h3><span class="pull-right"><i class="fa fa-star"></i></span>
+                 <h3 class="box-title" *ngIf="remedy" >{{remedy?.des_name}}</h3><span class="pull-right"><i class="fa fa-star"></i></span>
                </div>
                <!-- /.box-header -->
                <div class="box-body">
@@ -24,11 +24,11 @@
 
                  <dl class="col-sm-9 col-xs-12">
                    <dt>Categoria</dt>
-                   <dd>{{ remedy?.des_category | json }}</dd>
+                   <dd>{{ remedy?.des_category}}</dd>
                    <dt>Dosagem</dt>
-                   <dd>{{remedytest.des_dosage | json}}</dd>
+                   <dd>{{remedy?.des_dosage}}</dd>
                    <dt>Descrição</dt>
-                   <dd>{{remedytest.des_description}}</dd>
+                   <dd>{{remedy?.des_description}}</dd>
                    <a href="#" [routerLink]="['/remedy-register']"><h4>Cadastrar novo remédio</h4></a>
 
                  </dl>
