--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 <section class="content">
   <div class="jumbotron welcome-jumbotron">
     <h1>Bem vindo ao GetMyRemedy!</h1>
-    <p>Procura doação de remédios ? Veja Quais estão disponiveis</p>
+    <p>Procura doação de remédios ? Veja Quais estão disponíveis</p>
     <a class="btn btn-primary btn-lg" [routerLink]="['/remedys']">Pesquisar</a>
   </div>
 
@@ -16,11 +16,11 @@
   <div class="jumbotron-custom jumbotron content-jumbotron">
     <h3> Nós acreditamos em um mundo melhor! <i class="fa fa-globe"></i></h3>
     <div class=" col-xs-12 col-md-4">
-      <h3> Economise dinheiro</h3>
+      <h3> Economize dinheiro</h3>
       <h1><i class="fa fa-money"></i></h1>
     </div>
     <div class=" col-xs-12 col-md-4">
-      <h3> Economise Tempo</h3>
+      <h3> Economize Tempo</h3>
       <h1><i class="fa fa-clock-o"></i></h1>
     </div>
 
