--- a/src/app/components/remedys/remedy-details/comments/comments.component.html
+++ b/src/app/components/remedys/remedy-details/comments/comments.component.html
@@ -16,7 +16,7 @@
 
 </div>
 
-<!--<div class=footer>
+<div class=footer>
 
 <div class="col-md-3"></div>
 
@@ -32,4 +32,4 @@
 
 <div class="col-md-3"></div>
 
-</div> -->
+</div> 
