Comment Works and bcrypt

--- a/src/app/components/remedys/remedy-details/comments/comments.component.html
+++ b/src/app/components/remedys/remedy-details/comments/comments.component.html
@@ -4,13 +4,13 @@
     <div class="box-header with-border">
       <span class="review-score pull-right"><i class="fa fa-user"></i></span>
       <div class="user-block">
-        <span class="username">{{comment.name}}</span>
-        <span class="description">{{comment.date | date:'dd/MM/yyy'}}</span>
+        <span class="username">{{comment.nom_name}}</span>
+        <span class="description">{{comment.des_date}}</span>
       </div>
     </div>
 
     <div class="box-body">
-      <p>{{comment.text}}</p>
+      <p>{{comment.des_comment}}</p>
     </div>
   </div>
 
@@ -32,4 +32,4 @@
 
 <div class="col-md-3"></div>
 
-</div> 
+</div>
