--- a/src/app/components/remedy-register/remedy-register.component.html
+++ b/src/app/components/remedy-register/remedy-register.component.html
@@ -39,7 +39,7 @@
 
 
                 <div class="col-md-4 col-xs-6" type="submit">
-                  <button class="btn btn-primary col-md-12 button-custom" type="sbmit" (click)="checkInformations(formRemedy.value)" [disabled]=" !formRemedy.valid && loggedIn()"  name="remedyRegisterButtonSubmit">Confirmar</button>
+                  <button class="btn btn-primary col-md-12 button-custom" type="submit" (click)="checkInformations(formRemedy.value)" [disabled]=" !formRemedy.valid && loggedIn()"  name="remedyRegisterButtonSubmit">Confirmar</button>
                 </div>
 
                 <div class="col-md-4 ">
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="col-md-4 col-xs-6" type="submit">
-                  <button class="btn btn-danger col-md-12 button-custom" type="sbmit" [routerLink]="'[/]'"  name="remedyRegisterButtonSubmit">Cencelar</button>
+                  <button class="btn btn-danger col-md-12 button-custom" type="submit" (click)="returnHome()" name="remedyRegisterButtonSubmit">Cencelar</button>
                 </div>
 
 
