--- a/src/app/components/remedys/remedy/remedy.component.html
+++ b/src/app/components/remedys/remedy/remedy.component.html
@@ -1,4 +1,4 @@
-<a   [routerLink]="['/remedys',remedy.des_name]">
+<a   [routerLink]="['/remedys',remedy.idtb_remedys_menu]">
   <div class="place-info-box">
     <span class="place-info-box-icon"><img [src]="remedy.des_imagePath" /></span>
 
