--- a/src/app/components/remedys/remedy-details/remedy-details.component.html
+++ b/src/app/components/remedys/remedy-details/remedy-details.component.html
@@ -30,6 +30,7 @@
                    <dt>Descrição</dt>
                    <dd>{{remedy?.des_description}}</dd>
                    <a href="#" [routerLink]="['/remedy-register']"><h4>Cadastrar novo remédio</h4></a>
+                   <dd>Atenção: É estritamente proibido a doação de quaisquer remédios sem apresentação correta da receita médica que só pode ser passada por um médico responsável.</dd>
 
                  </dl>
                </div>
