--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,6 +5,7 @@
 <section class="content text-aligin-center">
   <p class="lead">
       GetMyRemedy | Aplicação destinada a doações de remédios.
+      Atenção: É estritamente proibido a doação de quaisquer remédios sem apresentação correta da receita médica que só pode ser passada por um médico responsável.
     </p>
   <p class="lead">Copyright 2017 GetMyRemedy (<a href="#">#</a>)</p>
   <p class="lead">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
